forgot some stuff

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </style>
   </head>
   <body>
-    <form>
+    <form id="new-task-form">
       <input type="text" name="new-task-title" id="new-task-title" />
       <button type="submit">Add</button>
     </form>
